syntax = "proto2";

package stremio.core.types;

option java_package = "com.stremio.core.types.api";

message LinkAuthKey{
  required string auth_key = 1;
}

message LinkCodeResponse {
  required string code = 1;
  required string link = 2;
  required string qrcode = 3;
}

